Implementation Sskx - Table der Tafeln (#2297)
* Implementation Sskx - Table der Tafeln

* fix table transform by change control area

* Update Sskx transformator

* Remove test code

* Sskx: add RIlnummer variable

* Update table reference

---------

Co-authored-by: eclipse-set-bot <set-bot@eclipse.org>